--- a/style/main.css
+++ b/style/main.css
@@ -11,6 +11,35 @@ body {
   visibility: hidden;
 }
 
+.start-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+.start-btn {
+  background-color: rgb(21, 161, 237);
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 2rem;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.start-btn:hover {
+  background-color: rgb(127, 206, 248);
+}
+
 .container {
   height: 100vh;
   margin: 0 auto;
@@ -106,13 +135,11 @@ body {
   display: inline-block;
   height: 350px;
   max-width: 100%;
-  /* height: auto; */
 }
 
 .six .hat {
   left: 41.5%;
   position: absolute;
-  /* transform: scale(0.1); */
   top: -35%;
   width: 80px;
 }
@@ -159,7 +186,7 @@ body {
 }
 
 .nine #more-fun {
-  visibility: hidden; /* Hide button initially */
+  visibility: hidden;
 }
 
 #replay {
@@ -167,7 +194,6 @@ body {
   z-index: 3;
 }
 
-/* Media Queries */
 @media screen and (max-height: 1000px) {
   .six .hat {
     left: 40%;
@@ -215,7 +241,6 @@ body {
   }
 
   .six .hat {
-    /* top: -20px; */
     width: 50px;
   }
 
