--- a/style/main.css
+++ b/style/main.css
@@ -138,9 +138,10 @@ body {
 }
 
 .six .hat {
-  left: 41.5%;
+  left: 50%;
   position: absolute;
-  top: -35%;
+  top: -10%;
+  transform: translateX(-50%);
   width: 80px;
 }
 
@@ -196,25 +197,29 @@ body {
 
 @media screen and (max-height: 1000px) {
   .six .hat {
-    left: 40%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
 @media screen and (max-height: 800px) {
   .six .hat {
-    left: 37%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
 @media screen and (max-height: 700px) {
   .six .hat {
-    left: 32%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
 @media screen and (max-height: 850px) and (max-width: 450px) {
   .six .hat {
-    left: 32%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
@@ -242,6 +247,8 @@ body {
 
   .six .hat {
     width: 50px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .wish-hbd {
